--- a/notebook/fetal_health.ipynb
+++ b/notebook/fetal_health.ipynb
@@ -19,9 +19,9 @@
     "\n",
     "The target variable in this dataset is the fetal health classification, which has three distinct classes:\n",
     "\n",
-    "- **Normal:** Represents cases where fetal health is within the normal range.\n",
-    "- **Suspect:** Indicates cases with a suspicion of potential health issues.\n",
-    "- **Pathological:** Identifies cases with clear signs of fetal health pathology.\n",
+    "- **1 - Normal:** Represents cases where fetal health is within the normal range.\n",
+    "- **2 - Suspect:** Indicates cases with a suspicion of potential health issues.\n",
+    "- **3 - Pathological:** Identifies cases with clear signs of fetal health pathology.\n",
     "\n",
     "The goal of this project is to develop a machine learning model that accurately classifies fetal health based on the features extracted from Cardiotocogram exams.\n",
     "\n"
